# musicbot

./: main.py  pyproject.toml
