[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
PyNaCl = "1.5.0"
selenium = "4.8.2"
beautifulsoup4 = "4.11.2"
youtube_dl = "2021.12.17"
youtube-dl2 = "2.0"
requests = "2.28.2"
lxml = "4.9.2"
chromedriver = "2.24.1"
webdriver-manager = "3.8.5"
ffmpeg-python = "0.2.0"
chromedriver-autoinstaller = "0.4.0"
webserver = "^0.10.3"
bs4 = "^0.0.1"
discord = "^2.2.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"